[tool.poetry]
name = "repl-nix-saskibackend-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
langchain-openai = "^0.1.8"
pydantic = "^2.7.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
langchain-core = "^0.2.9"
typing-extensions = "^4.12.2"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langgraph = "^0.0.69"
timezonefinder = "^6.5.2"
geopy = "^2.4.1"
pandas = "^2.2.2"
pyairtable = "^2.3.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
